Added direct requests to Obsidian DB. Not render though

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chokidar": "^4.0.3",
     "image-js": "^0.36.1",
     "jsdom": "^26.1.0",
-    "next": "15.2.4",
+    "nano": "^11.0.0",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "puppeteer": "^24.6.1",
     "react": "^19.0.0",
