--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "chokidar": "^4.0.3",
     "image-js": "^0.36.1",
     "jsdom": "^26.1.0",
+    "marked": "^16.3.0",
+    "marked-katex-extension": "^5.1.5",
     "nano": "^11.0.0",
     "next": "^15.5.3",
     "next-themes": "^0.4.6",
